--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -120,8 +120,7 @@ Aa-6
     <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果$searched_count$件
     </p> -->
-    <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
-
+    <div id="list" style="display:none;">
         <div class="card">
             <div class="card-body">
                 <div class="table-responsive">
